-------------
Version 0.5.1
-------------

COCKPIT

- Encryption algorithm can be changed in the preferences dialog.
- Progress dialogs modified to fix display problems with JDK version 1.6.


SYNCHRONIZE

- Added property setting to ignore missing source directories when uploading.
- Progress status messages shortened to fit into 80 character width consoles.


TOOLKIT

  * General

- Added the Bouncy Castle security provider to the suite, increasing the number
  of cipher algorithms available for encrypting files.
- The method S3Service.listObjectsChunked now includes Common Prefixes in the
  result object returned.

  * Multi-threaded Service
  
- Administration actions can have more threads assigned than upload/download 
  actions with the new configuration setting s3service.admin-max-thread-count.
  These connections run much faster with more threads and as they are light 
  weight they less likely to fail with higher thread counts.


-------------
Version 0.5.0
-------------

COCKPIT

- Login credentials can now be stored in S3.
- Added a dialog for configuring Bucket Logging.
- Objects can be filtered by prefix and/or delimiter strings.
- Third-party buckets can be added without first logging in.
- User can cancel the listing of objects in large buckets.
- Files being sent to s3 are only opened when necessary, removing the potential
  for too many files to be open at once (exceeding an Operating System 
  imposed limit).
- When uploading files, specific file/directory paths can be ignored 
  using .jets3t-ignore settings files.
- Access Control List permissions of uploaded files can be set to PRIVATE, 
  PUBLIC_READ or PUBLIC_READ_WRITE


SYNCHONIZE

- Progress status messages are displayed for long-running processes.
- Files being sent to s3 are only opened when necessary, removing the potential
  for too many files to be open at once (exceeding an Operating System 
  imposed limit).
- When uploading files, specific file/directory paths can be ignored 